@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'info.solidsoft.pitest' version '1.15.0'
 }
 
 application {
@@ -17,11 +18,44 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.mockito:mockito-core:5.6.0'
-    testImplementation 'net.jqwik:jqwik:1.9.3'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.1.1'
 }
 
 test {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
     useJUnitPlatform()
+
+    testLogging {
+        events "passed", "skipped", "failed"
+        showStandardStreams = true
+        exceptionFormat "full"
+    }
 }
+
+run {
+    standardInput = System.in
+}
+
+
+pitest {
+    testPlugin = "junit5"
+    junit5PluginVersion = '1.2.1'
+
+    targetClasses = [
+            'CrossyRoad.*',
+            'CrossyRoad.**'
+    ]
+
+    targetTests = [
+            '**Test',
+            '**Tests',
+            '**TestCase'
+    ]
+
+    threads = 4
+    outputFormats = ['HTML', 'XML']
+    timestampedReports = false
+    jvmArgs = ["-Xmx1G"]
+}
+
